syntax = "proto3";

package pluggable.transfer;

option go_package = "pkg/pb";

message Credentials {
    string user_id = 1;
    string user_key = 2;
}